platform/kubernetes/build-cell/lab/pki.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lrail-security
  labels:
    kubernetes.io/metadata.name: lrail-security
    dev.lrail/lab: mb
---
apiVersion: v1
kind: Namespace
metadata:
  name: lrail-registry
  labels:
    kubernetes.io/metadata.name: lrail-registry
    dev.lrail/lab: mb
---
apiVersion: v1
kind: Namespace
metadata:
  name: lrail-storage
  labels:
    kubernetes.io/metadata.name: lrail-storage
    dev.lrail/lab: mb
